[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.3.0"
Flask = "^2.2.0"
urllib3 = "1.26.15"
geopandas = "^0.13.2"
pyproj = "^3.6.0"
shapely = "^2.0.1"
pyogrio = "0.6.0"
matplotlib = "3.7.2"
networkx = "^3.1"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"